--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 body {
   display: flex;
   flex-direction:column;
-  height: 100vh;
+  height: 400vh;
 	background-color: var(--bg-color);
 }
 
@@ -31,9 +31,9 @@ ul, ol {
 
 .wrapper {
   display: flex;
-  justify-content: center;
   width 100%;
-  background-color: var(--menu-primary)
+  background-color: var(--menu-primary);
+  justify-content: center;
 }
 
 .nav {
@@ -45,6 +45,8 @@ ul, ol {
 }
 
 .nav__item{
+  margin-left: 20px;
+  margin-right: 20px;
   padding-left: 20px;
   padding-right: 20px;
   background-color: var(--menu-secondary);
@@ -52,12 +54,40 @@ ul, ol {
   border-radius: 3vh;
 }
 
+
 @media (hover:hover) {
   .nav__item:hover{
     background-color: var(--menu-highlight);
     fill: var(--menu-highlight);
   }
 
+}
+
+.parallax {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  background-image: url("https://workboxx.de/wp-content/uploads/2020/05/blur-close-up-code-computer-54681b9.jpg");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.content {
+  position: absolute;
+  margin-top: 20vh;
+  padding: 10px;
+  display: flex;
+  width: 100%;
+  height: 50vh;
+  background-color: var(--menu-primary)
+}
+
+.info {
+    display: flex;
+    width: 100%;
+    background-color: var(--menu-primary)
 }
 
 footer {
