--- a/style.css
+++ b/style.css
@@ -20,6 +20,11 @@ body {
 	background-color: var(--bg-color);
 }
 
+img {
+  margin-top: 20px;
+  border-radius: 10px;
+}
+
 ul, ol {
   list-style-type: none;
 }
@@ -63,6 +68,22 @@ ul, ol {
 
 }
 
+.text_box {
+  display: flex;
+  flex-direction: column;
+  transform: translate(50%, 0);
+  max-width: 50%;
+  padding: 10px;
+  margin: 12px;
+  border-radius: 10px;
+  text-align: center;
+  background-color: var(--menu-highlight);
+}
+
+img {
+  max-width: 100%;
+}
+
 .parallax {
   position: relative;
   height: 100%;
@@ -75,13 +96,16 @@ ul, ol {
 }
 
 .content {
+  display: flex;
+  flex-direction: column;
   position: absolute;
   margin-top: 20vh;
-  padding: 10px;
-  display: flex;
+  padding: 20px;
   width: 100%;
-  height: 50vh;
-  background-color: var(--menu-primary)
+  min-height: 20vh;
+  background-color: var(--menu-primary);
+  color: var(--menu-secondary);
+  text-align: center;
 }
 
 .info {
